# cvector

./: .gitignore  CMakeLists.txt  cvec.c  cvec.h  vec.c  vec.h  vector.c  vector.h
.github/workflows/: main.yml
example/: main.c
src/: cvec.c  cvec.h
test/: CMakeLists.txt  main.c
